charon/tests/ui/regressions/dyn-hrtb-ice.out
error: internal compiler error: /rustc-dev/14210df0e27ccd7d9e6a05b8085cbd438e4bbc65/compiler/rustc_infer/src/infer/region_constraints/mod.rs:492:21: cannot relate bound region: '{erased} == '^1_0.Named(test_crate::dyn_fn_arg::'a)


thread 'rustc' panicked at /rustc-dev/14210df0e27ccd7d9e6a05b8085cbd438e4bbc65/compiler/rustc_infer/src/infer/region_constraints/mod.rs:492:21:
Box<dyn Any>
note: run with `RUST_BACKTRACE=1` environment variable to display a backtrace
error: Hax panicked when translating `test_crate::dyn_fn_arg`.
 --> tests/ui/regressions/dyn-hrtb-ice.rs:3:1
  |
3 | pub fn dyn_fn_arg<'a>(_: &dyn Fn(&'a i32)) {}
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: internal compiler error: /rustc-dev/14210df0e27ccd7d9e6a05b8085cbd438e4bbc65/compiler/rustc_infer/src/infer/region_constraints/mod.rs:492:21: cannot relate bound region: '{erased} == '^1_0.Named(test_crate::hrtb_fn_pointer::'a)


thread 'rustc' panicked at /rustc-dev/14210df0e27ccd7d9e6a05b8085cbd438e4bbc65/compiler/rustc_infer/src/infer/region_constraints/mod.rs:492:21:
Box<dyn Any>
error: Hax panicked when translating `test_crate::hrtb_fn_pointer`.
 --> tests/ui/regressions/dyn-hrtb-ice.rs:5:1
  |
5 | pub fn hrtb_fn_pointer(_: for<'a> fn(&'a dyn Fn(&'a u8))) {}
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: internal compiler error: /rustc-dev/14210df0e27ccd7d9e6a05b8085cbd438e4bbc65/compiler/rustc_infer/src/infer/region_constraints/mod.rs:492:21: cannot relate bound region: '{erased} == '^1_0.Named(test_crate::hrtb_dyn_fn::'a)


thread 'rustc' panicked at /rustc-dev/14210df0e27ccd7d9e6a05b8085cbd438e4bbc65/compiler/rustc_infer/src/infer/region_constraints/mod.rs:492:21:
Box<dyn Any>
error: Hax panicked when translating `test_crate::hrtb_dyn_fn`.
 --> tests/ui/regressions/dyn-hrtb-ice.rs:7:1
  |
7 | pub fn hrtb_dyn_fn(_: &dyn for<'a> Fn(&dyn Fn(&'a i32))) {}
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: internal compiler error: /rustc-dev/14210df0e27ccd7d9e6a05b8085cbd438e4bbc65/compiler/rustc_infer/src/infer/region_constraints/mod.rs:492:21: cannot relate bound region: '{erased} == '^1_0.Named(test_crate::f::'a)


thread 'rustc' panicked at /rustc-dev/14210df0e27ccd7d9e6a05b8085cbd438e4bbc65/compiler/rustc_infer/src/infer/region_constraints/mod.rs:492:21:
Box<dyn Any>
error: Hax panicked when translating `test_crate::f`.
  --> tests/ui/regressions/dyn-hrtb-ice.rs:13:1
   |
13 | pub fn f<'a>(_: &dyn Obj<'a, V = i32>) {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


thread 'rustc' panicked at /rustc-dev/14210df0e27ccd7d9e6a05b8085cbd438e4bbc65/compiler/rustc_infer/src/infer/region_constraints/mod.rs:492:21:
Box<dyn Any>
error: Hax panicked when translating `test_crate::dyn_fn_arg`.
 --> tests/ui/regressions/dyn-hrtb-ice.rs:3:1
  |
3 | pub fn dyn_fn_arg<'a>(_: &dyn Fn(&'a i32)) {}
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: Item `test_crate::dyn_fn_arg` caused errors; ignoring.
 --> tests/ui/regressions/dyn-hrtb-ice.rs:3:1
  |
3 | pub fn dyn_fn_arg<'a>(_: &dyn Fn(&'a i32)) {}
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


thread 'rustc' panicked at /rustc-dev/14210df0e27ccd7d9e6a05b8085cbd438e4bbc65/compiler/rustc_infer/src/infer/region_constraints/mod.rs:492:21:
Box<dyn Any>
error: Hax panicked when translating `test_crate::hrtb_fn_pointer`.
 --> tests/ui/regressions/dyn-hrtb-ice.rs:5:1
  |
5 | pub fn hrtb_fn_pointer(_: for<'a> fn(&'a dyn Fn(&'a u8))) {}
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: Item `test_crate::hrtb_fn_pointer` caused errors; ignoring.
 --> tests/ui/regressions/dyn-hrtb-ice.rs:5:1
  |
5 | pub fn hrtb_fn_pointer(_: for<'a> fn(&'a dyn Fn(&'a u8))) {}
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


thread 'rustc' panicked at /rustc-dev/14210df0e27ccd7d9e6a05b8085cbd438e4bbc65/compiler/rustc_infer/src/infer/region_constraints/mod.rs:492:21:
Box<dyn Any>
error: Hax panicked when translating `test_crate::hrtb_dyn_fn`.
 --> tests/ui/regressions/dyn-hrtb-ice.rs:7:1
  |
7 | pub fn hrtb_dyn_fn(_: &dyn for<'a> Fn(&dyn Fn(&'a i32))) {}
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: Item `test_crate::hrtb_dyn_fn` caused errors; ignoring.
 --> tests/ui/regressions/dyn-hrtb-ice.rs:7:1
  |
7 | pub fn hrtb_dyn_fn(_: &dyn for<'a> Fn(&dyn Fn(&'a i32))) {}
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


thread 'rustc' panicked at /rustc-dev/14210df0e27ccd7d9e6a05b8085cbd438e4bbc65/compiler/rustc_infer/src/infer/region_constraints/mod.rs:492:21:
Box<dyn Any>
error: Hax panicked when translating `test_crate::f`.
  --> tests/ui/regressions/dyn-hrtb-ice.rs:13:1
   |
13 | pub fn f<'a>(_: &dyn Obj<'a, V = i32>) {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: Item `test_crate::f` caused errors; ignoring.
  --> tests/ui/regressions/dyn-hrtb-ice.rs:13:1
   |
13 | pub fn f<'a>(_: &dyn Obj<'a, V = i32>) {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 4 previous errors

ERROR Code failed to compile
